# typedecl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wrappers_config.in
include/: property.hxx  tag.hxx  typedecl.hxx  wrapper.hxx
tests/: wrapper_tests.cxx  wrappers_tests.cxx
